# lexy

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  main.cpp  myScanner.lexy  regex_converter  specification.slx  tokens.spec
.github/workflows/: ci.yml
automata/: DFA.cpp  DFAMinimizer.cpp  NFA.cpp  NFADeterminizer.cpp  RegexPreprocessor.cpp  RegexToNFA.cpp  ShuntingYard.cpp  Visualizer.cpp  dfa.hpp  dfa_minimizer.hpp  fa.hpp  nfa.cpp  nfa.hpp  nfa_determinizer.cpp
automata/headers/: Alphabet.h  DFA.h  DFAMinimizer.h  FA.h  NFA.h  NFADeterminizer.h  RegexPreprocessor.h  RegexToNFA.h  ShuntingYard.h  State.h  Visualizer.h
common/: helpers.hpp  types.hpp
example/: sample_program.rs  sample_scanner.lexy
examples/: test_myScanner.cpp
global/: types.h
include/automata/: dfa.hpp  dfa_minimizer.hpp  finite_automaton.hpp  nfa.hpp  nfa_determinizer.hpp  regex_to_nfa.hpp  state.hpp  thompson_construction.hpp
include/code_generation/: code_generator.hpp
include/core/: helpers.hpp  types.hpp
include/regex/: ast.hpp  ast_to_nfa.hpp  parser.hpp  preprocessor.hpp  scanner.hpp  token.hpp
include/specifications/: spec_parser.hpp  spec_scanner.hpp  spec_token.hpp
regex/: RegexASTToNFA.cpp  RegexParser.cpp  RegexPreprocessor.cpp  RegexScanner.cpp  regex_ast.hpp  regex_preprocessor.hpp  regex_scanner.cpp  regex_scanner.hpp
tests/: myScanner.lexy  test.sh  test_myScanner.cpp
user_specifications/: user_spec_token.hpp
utils/: AutomataVisualize.cpp  RegexASTVisualizer.cpp
visualization/: automata_visualizer.cpp  automata_visualizer.hpp
(+94 files in other folders)
